# appsurify-testbrain-cli

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  MANIFEST.in  Makefile  README.md  docker-compose.yml  envs.sh  push.sh  pyproject.toml  qodana.sarif.json  qodana.yaml  requirements.txt  run_qodana.sh  setup.cfg  setup.py
.github/: codeql.yml  dependency.yml  pull-request.yaml  qodana_code_quality.yml  release.yaml  tag.yml  tests.yml
.github/archived/: lint.yml  tag.yml  testbrain.yml
.github/disabled/: check-code-style.yml  qodana_code_quality.yml  quality-assurance-on-pr.yaml  release-and-publish-on-tag.yaml
.github/main/: qa-check-and-tests.yaml
.github/workflows/: build-and-publish.yml  check-code-style.yml  code-quality-qodana.yml  code-quality.yml  codeql.yml  dependency-review.yml  dependency.yml  documantation.yml  lint.yml  linters.yml  main.yml  push.yml  pypi.yml  qa-check-and-tests.yaml  qodana.yml  qodana_code_quality.yml  quality-assurance-on-pr.yaml  release-and-publish-on-tag.yaml  release-build.yml  release-publish.yml  release.yaml  release.yml  tag.yml  test.yml  testbrain-flow.yml  testbrain-repository.yml  testbrain.yml  tests.yml
compose/: Dockerfile
doc-src/Writerside/: atc.tree  v.list
doc-src/Writerside/cfg/: buildprofiles.xml
doc-src/Writerside/code-snippets/: github-actions-docker-testbrain-push-main.yml  github-actions-testbrain-flow-full.yml
doc-src/Writerside/topics/: Components.topic  about-testbrain-cli.topic  auth.topic  components.topic  configuration.topic  features.topic  getting-started.topic  gitHub-actions.topic  installation.topic  integration-with-ci-systems.topic  project.topic  quick-start.topic  report.topic  repository.topic  testsuite.topic  tutorial.topic  сompatibility.topic
docs/: HelpTOC.json  Map.jhm  about-testbrain-cli.html  config.json  getting-started.html  quick-start.html
docs/Writerside/: atc.tree  budges.html  redirection-rules.xml  v.list  writerside.cfg
docs/Writerside/cfg/: buildprofiles.xml  glossary.xml
docs/Writerside/code-snippets/: github-actions-push-with-docker.yml  github-actions-testbrain-push-main.yml
docs/Writerside/topics/: GROUP.topic  Reference.topic  about-testbrain-cli.topic  discover-testbrain-cli.topic  getting-started.topic  github-actions.topic  integration-with-ci-systems.topic
docs/html/: Map.jhm  about-testbrain-cli.html  starting-page-getting-started.json
requirements/: base.txt  default.txt  dev.txt  docs.txt  pkgutils.txt
resources/samples/junit/: junit-py310-report-a.xml  junit-py311-report-a.xml  junit-py312-report-a.xml  junit-py38-report-a.xml  junit-py39-report-a.xml
resources/samples/mstest/: mstest-report-a.trx
scripts/: cleanup_runs.py  lint.sh  push.sh  run_docker_build.sh  run_qodana.sh  run_testbrain_cli.sh  run_testbrain_docker.sh
scripts/debug/: clients.py  default_group.py  scm.py
src/_testbrain/: __init__.py  cli.py  command.py  plfrm.py
src/_testbrain/api/: adapter.py  client.py
src/debug/: clients.py  scm.py  scratch.py  usage_client.py
src/git2testbrain/: __init__.py  __main__.py  cli.py  client.py  controller.py  models.py  utils.py
src/testbrain/: __init__.py  __main__.py  _platform.py  cli.py  core.py  log.py
src/testbrain/api/: client.py
src/testbrain/cli/: __init__.py
src/testbrain/client/: __init__.py  adapters.py  auth.py  client.py  utils.py
src/testbrain/contrib/: crashdump.py
src/testbrain/core/: command.py  context.py  crashdump.py
src/testbrain/git2testbrain/: controller.py
src/testbrain/repository/: __scm.py  _scm.py  cli.py  client.py  models.py  scm.py  services.py  utils.py
src/testbrain/terminal/: __init__.py  process.py
src/testbrain/utils/: crasher.py  logging.py  platform.py
testbrain/: __init__.py  __main__.py  __version__.py  _state.py  exceptions.py  git2testbrain.py  local.py  platforms.py  signals.py
testbrain/app/: __init__.py  base.py  builtins.py  defaults.py  log.py  routes.py  utils.py
testbrain/apps/: git2testbrain.py
testbrain/client/: __init__.py  adapter.py  auth.py  client.py  types.py  utils.py
testbrain/core/: __init__.py  command.py  context.py  crashreporter.py  log.py  platform.py
testbrain/core/api/: client.py  utils.py
testbrain/crashreporter/: __init__.py  crashreporter.py  injector.py
testbrain/git2testbrain/: __init__.py  client.py  controller.py  exceptions.py  git.py  models.py  patterns.py  repository.py  types.py  utils.py
testbrain/loaders/: __init__.py  base.py  default.py
testbrain/repository/: __init__.py
testbrain/repository/git/: __init__.py  client.py  cmd.py  diff.py  git.py  models.py  patterns.py  types.py  utils.py
testbrain/tbgit/: __init__.py
testbrain/utils/: __init__.py  abstract.py  crashreport.py  debug.py  deprecated.py  functional.py  graph.py  log.py  nodenames.py  sysinfo.py  term.py  text.py  threads.py
testbrain/utils/dispatch/: signal.py
testbrain/utils/static/: __init__.py
testbrain/x_do_remove/: __init__.py
tests/: conftest.py  test_apps_git_client.py  test_apps_git_services_push.py  test_basic.py  test_bin.py  test_cli_apps_repository.py  test_client.py  test_git2testbrain.py  test_repository.py  test_repository_git.py  test_scm_git_process.py  test_scm_git_vcs.py
(+36 files in other folders)
