[tool.poetry]
name = "appsurify-testbrain-cli"
version = "2023.9.9"
description = "Command Line Interface for Appsurify Testbrain."
license = "MIT"
authors = [
    "James Farrier <jamesfarrier@appsurify.com>",
    "Artem Demidenko <ar.demidenko@appsurify.com>",
]
maintainers = [
    "James Farrier <jamesfarrier@appsurify.com>",
    "Artem Demidenko <ar.demidenko@appsurify.com>",
]
readme = "README.md"
homepage = "https://appsurify.com"
repository = "https://github.com/Appsurify/appsurify-testbrain-cli"
documentation = ""
keywords = ["appsurify", "testbrain", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    {include = "testbrain"},

]
include = ["CHANGELOG.md"]


[tool.poetry.scripts]
testbrain = "testbrain.__main__:app"
git2testbrain = "testbrain.bin.git2testbrain:app"


[tool.poetry.dependencies]
python = ">=3.7,<4"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.4.2"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
urllib3 = "<2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-subprocess = "^1.5.0"
requests-mock = "^1.11.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest = "^7.4.2"
pytest-subprocess = "^1.5.0"
requests-mock = "^1.11.0"
pytest-cov = "^4.1.0"
gitpython = "^3.1.37"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "testbrain/"
testpaths = "tests/"
#python_classes = "test_*"
#xfail_strict=true
#addopts = "--strict-markers"
#markers = ["sleepdeprived_patched_module", "masked_modules", "patched_environ", "patched_module", "flaky", "timeout"]