[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
max-line-length = 119
exclude = build,.git,.tox,./tests/.env
extend-ignore =
    E203,  # incompatible with black https://github.com/psf/black/issues/315#issuecomment-395457972
    D102,  # Missing docstring in public method
    D103,  # Missing docstring in public function
    D104,  # Missing docstring in public package
    D105,  # Missing docstring in magic method
    D107,  # Missing docstring in __init__
    D401,  # First line should be in imperative mood; try rephrasing
    D412,  # No blank lines allowed between a section header and its content
    E741,  # ambiguous variable name '...'
    E742,  # ambiguous class definition '...'


[bdist_rpm]
requires = pytz >= 2016.7
           billiard >= 3.6.3.0,<4.0
           kombu >= 5.2.1,<6.0.0

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[metadata]
license_file = LICENSE

[options.package_data]
testbrain =
    templates/*.py-tpl
    templates/*.yml-tpl
    templates/*.conf-tpl

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = testbrain
line_length = 119
multi_line_output = 5